# Monk-Class

./: CMakeLists.txt  README.md  main.cpp  main.h
cwmods/: CMakeLists.txt  MakeCWModsCMake.py  cwmods.cpp  cwmods.h  cwsdk.cpp  cwsdk.h
cwmods/common/: ByteRGBA.cpp  ByteRGBA.h  FloatRGBA.cpp  FloatRGBA.h  IntVector2.h
cwmods/cube/: AI.h  Buff.h  ChatWidget.cpp  ChatWidget.h  Client.cpp  Client.h  Creature.cpp  Creature.h  Field.h  FormulaDetailsWidget.h  GUI.h  Game.cpp  Game.h  Host.h  Item.h  MapOverlayWidget.h  OptionsWidget.h  Projectile.h  ServerUpdates.h  Speech.h  SpeechWidget.h  Sprite.h  SpriteManager.h  TextFX.h  VoxelWidget.h  World.cpp  World.h  WorldMap.h  Zone.cpp  Zone.h  constants.h
cwmods/gfx/: Chunk.cpp  Chunk.h  D3D11IndexBuffer.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11VertexBuffer.h  IndexBuffer.h  VertexBuffer.h
cwmods/msvc/: list.h  string.h  vector.h  wstring.cpp  wstring.h
cwmods/plasma/: Array.h  Attribute.h  ContinuousAttribute.h  DiscreteAttribute.h  Engine.h  Matrix.cpp  Node.h  Object.h  Widget.h
lib/xed/include/: xed-address-width-enum.h  xed-attribute-enum.h  (+37 more)
src/: ClassFramework.cpp  ClassFramework.h  main.cpp  main.h
src/hooks/: fix_treasure.h  hook_add_flamerush.h  hook_add_ult.h  hook_add_villager_ult_in_camouflage.h  hook_creation_menu.h  hook_custom_damage.h  hook_customclass_nompdrain.h  hook_fire_trail.h  hook_fix_villager_ult.h  hook_item_restriction_bypass.h  hook_new_ult.h  hook_villager_damage.h  hook_villager_new_ultimate.h  hook_villager_no_mp_drain.h  hook_villager_ultimate.h  menu_hook.h  old_menu_hook.h
